[gd_scene load_steps=3 format=3 uid="uid://dc2o2csd0m7fg"]

[ext_resource type="Script" uid="uid://t8btjwb1cm75" path="res://Scenes/buildingEntry.gd" id="1_hph7q"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hph7q"]

[node name="BuildingEntry" type="Node3D"]
script = ExtResource("1_hph7q")

[node name="EntryArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EntryArea"]
shape = SubResource("BoxShape3D_hph7q")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.442576, -0.0287555)
text = "לחץ E להכנס"

[connection signal="body_entered" from="EntryArea" to="." method="_on_entry_area_body_entered"]
